Refactored marketplace to use Voivodeships service

--- a/marketplace/templates/marketplace/announcement_club_for_coach.html
+++ b/marketplace/templates/marketplace/announcement_club_for_coach.html
@@ -32,7 +32,7 @@
                 </div>
 
                 <div class="col-6 col-md-3 text-center">
-                    <h5>{{ object.new_voivodeship.name }}</h5>
+                    <h5>{{ object.voivodeship_obj.name }}</h5>
                     Województwo
                 </div>
                 <div class="card-text col-md-12">
