--- a/marketplace/templates/marketplace/announcement_player_for_club.html
+++ b/marketplace/templates/marketplace/announcement_player_for_club.html
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="col-6 col-md-3 text-center">
-                    {% if not player.profile.new_voivodeship.name and not player.profile.address %}
+                    {% if not player.profile.voivodeship_obj.name and not player.profile.address %}
                     <h5>-</h5>
                     {% else %}
                         <h5>
