--- a/profiles/templates/profiles/cards/coach/card_primary.html
+++ b/profiles/templates/profiles/cards/coach/card_primary.html
@@ -13,7 +13,7 @@
             {% endif %}
             
             {% include template with key=_('Miasto')        value=profile.address|default:'-' %}
-            {% include template with key=_('Lokalizacja')   value=profile.new_voivodeship|default:'-' %}
+            {% include template with key=_('Lokalizacja')   value=profile|display_voivodeship|default:'-' %}
         {% endwith %}
         </div>
         <h2 class="card-title">{% trans 'Klub' %}</h2>
@@ -22,7 +22,7 @@
             {% with profile=show_user.profile template='platform/tables/two_table.html' %}
                 {% include template with key=_('Obecna drużyna')  value=profile.display_team|default:'-'|upper  link=profile.get_team_permalink %}
                 {% include template with key=_('Rozgrywki')       value=profile.display_league_top_parent|default:'-'|upper   link=profile.get_league_permalink %}
-                {% include template with key=_('Wojewodźtwo')     value=profile.display_voivodeship|default:'-' %}
+                {% include template with key=_('Wojewodźtwo')     value=profile|display_voivodeship|default:'-' %}
             {% endwith %}
         </div>
     </div>
