--- a/profiles/templates/profiles/cards/player/card_primary.html
+++ b/profiles/templates/profiles/cards/player/card_primary.html
@@ -1,4 +1,6 @@
 {% load i18n %}
+{% load playmaker %}
+
 <div class="card">
 <div class="card-body">
     <h2 class="card-title">{% trans 'Podstawowe informacje' %}</h2>
