Fixed scrolling to specific element in second navbar (price list, stories).

--- a/landingpage/templates/landingpage/first_section.html
+++ b/landingpage/templates/landingpage/first_section.html
@@ -81,11 +81,11 @@
         <div class="container">
 
             <div class="second__navbar_fixed d-flex justify-content-between align-items-start mx-3">
-                <a href="#history__section"><p class="active__border">Historie</p></a>
-                <a href="#how_it_works"><p>jak to działa?</p></a>
-                <a href="#price__section"><p>Cennik</p></a>
-                <a href="#test__section"><p>Formularz</p></a>
-                <a href="#faq__section"><p>FAQ</p></a>
+                <a data-href="#history__section"><p class="active__border">Historie</p></a>
+                <a data-href="#how_it_works"><p>jak to działa?</p></a>
+                <a data-href="#price__section"><p>Cennik</p></a>
+                <a data-href="#test__section"><p>Formularz</p></a>
+                <a data-href="#faq__section"><p>FAQ</p></a>
             </div>
         </div>
     </section>
