Fixed level displaying on team page.

--- a/clubs/templates/clubs/teams/card.html
+++ b/clubs/templates/clubs/teams/card.html
@@ -29,7 +29,7 @@
 
         {% include template with key=_('Rozgrywki')   value=object.display_league_top_parent|default:'-' ink=object.get_league_permalink %}
 
-        {% if object.display_name_junior and object.league.region %}
+        {% if object.display_name_junior %}
             {% include template with key=_('Poziom')  value=object.display_name_junior|default:'-'        %}
         {% endif %}
 
