--- a/profiles/templates/profiles/modals/_new_account_role_modal.html
+++ b/profiles/templates/profiles/modals/_new_account_role_modal.html
@@ -26,7 +26,7 @@
           <button class="btn-pm btn-pm-sm" type="submit" name="update" value="Update" id="submit-id-update">{% trans 'Wybieram role.' %}</button>
        
         {% else %}
-          Coś poszło nie tak... (brak forularza)
+          Coś poszło nie tak... (brak formularza)
         {% endif %}
         </form>
       </div>
