--- a/landingpage/templates/landingpage/first_section.html
+++ b/landingpage/templates/landingpage/first_section.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-    <div class="d-none justify-content-center mt-2 w-50 m-auto align-items-center main__btn">
+    <div class="justify-content-center mt-2 m-auto align-items-center main__btn">
         {% if user.is_authenticated %}
             <a href="#test__section" class="text-center reach_us_btn dark__background ">Zgłoś się</a>
         {% else %}
@@ -16,9 +16,9 @@
 
     <div class="dark__background">
         <div class="container d-flex justify-content-center">
-            <div class="second__navbar p-2 w-100">
+            <div class="second__navbar mt-2 w-100">
                 <a href="/"><span>Strona główna</span></a><span>/</span>
-                <span>Wsparcie transferowe</span>
+                <span class="support">Wsparcie transferowe</span>
             </div>
         </div>
     </div>
@@ -26,16 +26,16 @@
     <section class="landingpage__main_photo dark__background d-flex align-items-center">
         <div class="container h-100">
           <div class="row">
-            <div class="landingpage__section my-3 col-xl-6 p-4 d-flex flex-column flex-xl-row-reverse justify-content-center w-100">
+            <div class="landingpage__section mb-3 col-xl-6 p-4 d-flex flex-column flex-xl-row-reverse justify-content-center w-100">
                 <img src="{% static 'assets/img/landingpage/pilka_out.png' %}"
                      class="w-100"
                      alt="Player standing infront of stadium"
                 >
                 <div class="">
 
-                    <div class="">
+                    <div class="header__div">
                         <h1 class="mb-3">Weź udział w teście piłkarskim </h1>
-                        <p>Planujesz zmianę klubu w letnim oknie transferowym 2022?
+                        <p class="header__text">Planujesz zmianę klubu w letnim oknie transferowym 2022?
                             Znajdziemy klub, w którym będziesz mógł się sprawdzić.</p>
                     </div>
                     <div class="d-flex flex-column promo__section">
@@ -65,7 +65,7 @@
                         </div>
                     </div>
 
-                    <div class="d-flex justify-content-center mt-2 flex-column observe-div">
+                    <div class="d-flex align-items-center mt-2 flex-column observe-div">
                         {% if user.is_authenticated %}
                             <a href="#test__section" class="text-center reach_us_btn">Zgłoś się</a>
                         {% else %}
