--- a/backend/templates/500.html
+++ b/backend/templates/500.html
@@ -1,13 +1,24 @@
-<!DOCTYPE html>
-<html class="no-js">
-    <head>
-        <meta charset="utf-8" />
-        <title>500 Internal server error</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-    </head>
-    <body>
-        <h1>500 Internal server error</h1>
+{% extends 'base.html' %}
 
-        <h2>Wystąpił bliżej nie określony problem. Proszę spróbuj za chwile.</h2>
-    </body>
-</html>
+{% logger500 request.get_full_path %}
+
+{% block content %}
+    <section>
+        <div class="container text-center">
+            <div class="row justify-content-center">
+                <img class="col-lg-3 col-6 mb-5" src="{% static 'assets/img/404.png' %}" alt="404">
+            </div>
+            <div class="row">
+                <h1 class="col">Przepraszamy, ale strona nie istnieje.</h1>
+            </div>
+            <div class="row">
+                <h2 class="col">Pracujemy nad nowa wersją platformy. Wszelkie bieżące problemy prosimy o zgłaszanie na <span class="main-color">biuro@playmaker.pro</span>.</h2>
+            </div>
+             <div class="row justify-content-center">
+                 <div class="col">
+                     <input type=button value="Powrót" onClick="javascript:history.go(-1);" class="btn btn-danger mt-4 px-4">
+                 </div>
+            </div>
+        </div>
+    </section>
+{% endblock content %}
