--- a/backend/templates/partials/_menuitems.html
+++ b/backend/templates/partials/_menuitems.html
@@ -17,8 +17,10 @@
 {% comment %} <li><a href="/products/">Produkty</a></li> {% endcomment %}
 <li class="nav-item"><a class="nav-link" href="https://www.scoutmaker.pro/">{% trans 'Skauting' %}</a></li>
 <li class="nav-item"><a class="nav-link" href="/transfer/">{% trans 'Transfer' %}</a></li>
-<li class="nav-item"><a class="nav-link" href="{% url 'plays:list'%}">{% trans 'Rozgrywki' %}</a></li>
-<li class="nav-item"><a class="nav-link" href="/fantasy?season={{current_season}}&is_senior=true">{% trans 'Fantasy' %}</a></li>
+{% if is_scrapper_enabled %}
+    <li class="nav-item"><a class="nav-link" href="{% url 'plays:list'%}">{% trans 'Rozgrywki' %}</a></li>
+    <li class="nav-item"><a class="nav-link" href="/fantasy?season={{current_season}}&is_senior=true">{% trans 'Fantasy' %}</a></li>
+{% endif %}
 <li class="nav-item"><a class="nav-link" href="{% url 'products:products'%}">{% trans 'Produkty' %}</a></li>
 
 {% if not request.user.is_authenticated %}
