--- a/backend/templates/partials/navbar.html
+++ b/backend/templates/partials/navbar.html
@@ -3,6 +3,8 @@
 {% load playmaker %}
 {% load i18n %}
 
+{% is_scrapper_enabled as scrapper %}
+
 <style>
 /* ditch the ugle blue outline */
 .navbar-toggler:focus,
@@ -47,7 +49,7 @@
                 <ul class="nav navbar-nav">
                             
                     <!--li class="active"><a href="#header">Home</a></li-->
-                    {% include menuitems_template|default:"partials/_menuitems.html" %}
+                    {% include menuitems_template|default:"partials/_menuitems.html" with is_scrapper_enabled=scrapper %}
 
                     {% if request.user.is_authenticated %}
                     <!-- Navbar user icon -->
