--- a/profiles/templates/profiles/cards/player/card_season.html
+++ b/profiles/templates/profiles/cards/player/card_season.html
@@ -2,7 +2,7 @@
 {% load playmaker %}
 <div class="card">
     <div class="card-body">
-        <h2 class="card-title">{% trans 'Sezon' %} {{ season_stat.season_name }}</h2>
+        <h2 class="card-title">{% trans 'Sezon' %} {% firstof season_stat.season_name current_season %}</h2>
         <h6 class="card-subtitle mb-2 text-muted"></h6>
         <div class="card-text text-center">
             {% if season_circle_stats %}
