--- a/profiles/templates/profiles/partials/profile_nav_buttons/_nav_buttons_as_tab__role__.html
+++ b/profiles/templates/profiles/partials/profile_nav_buttons/_nav_buttons_as_tab__role__.html
@@ -24,9 +24,11 @@
  </li>
 
 {% if show_user.is_player %}
-  <li class="nav-item">
-    <a class="nav-link pm-nav {% if request.get_full_path == fantasy_url %}pm-nav-active{% endif %}" href="{{ fantasy_url }}">Fantasy</a>
-  </li>
+      {% if is_scrapper_enabled %}
+          <li class="nav-item">
+            <a class="nav-link pm-nav {% if request.get_full_path == fantasy_url %}pm-nav-active{% endif %}" href="{{ fantasy_url }}">Fantasy</a>
+          </li>
+      {% endif %}
   {% if show_user.profile.has_videos or editable %}
     <li class="nav-item">
       <a class="nav-link pm-nav {% if request.get_full_path == videos_url %}pm-nav-active{% endif %}" href="{{ videos_url }}">Video</a>
