--- a/profiles/templates/profiles/cards/player/card_primary.html
+++ b/profiles/templates/profiles/cards/player/card_primary.html
@@ -25,7 +25,7 @@
             {% if profile.display_name_junior %}
                 {% include template with key=_('Poziom')       value=profile.display_name_junior|default:'-'|upper        %} 
             {% endif %}
-            {% include template with key=_('Województwo')      value=profile|display_voivodeship|default:'-' %}
+            {% include template with key=_('Województwo')      value=profile.display_voivodeship|default:'-' %}
         {% endwith %}
     </div>
 </div>
