--- a/soccerbase/templates/soccerbase/tables/table_teams_card.html
+++ b/soccerbase/templates/soccerbase/tables/table_teams_card.html
@@ -31,7 +31,7 @@
 <div class="card item-card" style="">
   <div class="card-header d-md-none">
     <span class="object-title"> 
-      <a href="{{object.get_permalink}}"><strong>{{ object.name|upper }} {{ object.latest_league_history }}</strong></a>
+      <a href="{{object.get_permalink}}"><strong>{{ object.name|upper }}</strong></a>
     </span>
     <span class="float-right"> 
         {% observed_link user object text='obserwuj' otype='team'%}
@@ -62,7 +62,7 @@
                             <a href="{{ object.get_permalink }}"> 
                               <img class="avatar rounded img-responsive"
                                    src="{% thumbnail object.club.picture|default:'default_team.png' 'tables_avatar_show_medium' %}">
-                              <strong style="padding-left:15px;">{{ object.name|upper}} {{ object.latest_league_history }}</strong>
+                              <strong style="padding-left:15px;">{{ object.name|upper}}</strong>
                             </a>
                           </div>
 
