changed transfer pricing

--- a/landingpage/templates/landingpage/pricing_section.html
+++ b/landingpage/templates/landingpage/pricing_section.html
@@ -17,11 +17,11 @@
         </div>
         <div class="d-flex w-100 px-1 justify-content-between">
             <p class="pricelist_desc">Klasa okręgowa lub 4 liga</p>
-            <p class="pricelist__price">199 zł</p>
+            <p class="pricelist__price">299 zł</p>
         </div>
         <div class="d-flex w-100 px-1 justify-content-between">
-            <p class="pricelist_desc">3 liga</p>
-            <p class="pricelist__price">299 zł</p>
+            <p class="pricelist_desc">3 liga lub CLJ</p>
+            <p class="pricelist__price">499 zł</p>
         </div>
         <div class="d-flex w-100 px-1 justify-content-between">
             <p class="pricelist_desc w-25">Poziom profesjonalny <br class="d-md-none"> (2 liga lub wyżej)</p>
