--- a/app/templates/platform/debug_info.html
+++ b/app/templates/platform/debug_info.html
@@ -15,7 +15,7 @@
                 profile: <code>{{ user.profile }}</code><br>
                 <div class='pl-2'>
                     position: <code>{{ user.profile.get_position_raw_display }}</code><br>
-                    data_mapper_id: <code>{{ user.profile.data_mapper_id }}</code><br>
+                    data_mapper_id: <code>{{ user.profile.mapper }}</code><br>
                     :: Properties<br>
                     display_league: <code>{{ user.profile.display_league }}</code><br>
                     display_club: <code>{{ user.profile.display_club }}</code><br>
