--- a/landingpage/templates/landingpage/first_section.html
+++ b/landingpage/templates/landingpage/first_section.html
@@ -35,7 +35,7 @@
 
                     <div class="header__div">
                         <h1 class="mb-3">Weź udział w teście piłkarskim </h1>
-                        <p class="header__text">Planujesz zmianę klubu w letnim oknie transferowym 2022?
+                        <p class="header__text">Planujesz zmianę klubu w zimowym okienku transferowym 2023?
                             Znajdziemy klub, w którym będziesz mógł się sprawdzić.</p>
                     </div>
                     <div class="d-flex flex-column promo__section">
