--- a/profiles/templates/profiles/tables/_carrier_table.html
+++ b/profiles/templates/profiles/tables/_carrier_table.html
@@ -63,3 +63,5 @@
     {% endfor %}
     </tbody>
 </table>
+<span style="font-size: 0.8rem">{% trans 'na dzień' %} {{ metrics_updated_date }}</span>
+
