--- a/profiles/templates/profiles/cards/player/card_latest_games.html
+++ b/profiles/templates/profiles/cards/player/card_latest_games.html
@@ -5,7 +5,8 @@
         <h2 class="card-title">{% trans "Ostatnie mecze"%}</h2>
         <div class="card-text text-center">
             {% if last_games %}
-                {% include 'profiles/tables/_game_table.html' with short=True games=last_games user=show_user %}
+            <span style="font-size: 0.8rem">{% trans 'na dzień' %} {{ metrics_updated_date }}</span>
+                {% include 'profiles/tables/_game_table.html' with short=True games=last_games user=show_user metrics_updated_date='' %}
             {% else %}
                 <span class="heading text-muted"> 
                   {% trans 'Brak danych dla obecnego sezonu' %}  
