--- a/profiles/templates/profiles/cards/player/card_season.html
+++ b/profiles/templates/profiles/cards/player/card_season.html
@@ -6,7 +6,7 @@
         <h6 class="card-subtitle mb-2 text-muted"></h6>
         <div class="card-text text-center">
             {% if season_circle_stats %}
-            <span class="heading text-muted" style="font-size: 0.8rem">
+            <span style="font-size: 0.8rem">
                   {% trans 'na dzień' %} {{ metrics_updated_date }}
                 </span>
               <div class="row no-gutters">
