--- a/profiles/templates/profiles/tables/_game_table.html
+++ b/profiles/templates/profiles/tables/_game_table.html
@@ -91,3 +91,4 @@ DEBUG: short={{ short }}
     {% endfor %}
     </tbody>
 </table>
+{% if metrics_updated_date != '' %}<span style="font-size: 0.8rem">{% trans 'na dzień' %} {{ metrics_updated_date }}</span>{% endif %}
