--- a/profiles/templates/profiles/cards/player/card_season.html
+++ b/profiles/templates/profiles/cards/player/card_season.html
@@ -6,6 +6,9 @@
         <h6 class="card-subtitle mb-2 text-muted"></h6>
         <div class="card-text text-center">
             {% if season_circle_stats %}
+            <span style="font-size: 0.8rem">
+                  {% trans 'na dzień' %} {{ metrics_updated_date }}
+                </span>
               <div class="row no-gutters">
                 {% for circle_stat in season_circle_stats %}
                   <!-- progress bar -->
